tests/rosetta/out/Smalltalk/amicable-pairs.out
/tmp/amicable-pairs.st:6: parse error, expected ']'
